kubernetes/apps/searxng/searxng/app/httproute-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng-external
  namespace: searxng
  annotations:
    monitoring.webgrip.io/synthetic-check: blackbox-searxng-external
spec:
  hostnames:
    - search.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: searxng
          namespace: searxng
          port: 80
