kubernetes/apps/searxng/searxng/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: searxng-basic-auth
  namespace: searxng
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: searxng-external
  basicAuth:
    users:
      name: searxng-basic-auth
